--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "server": "json-server -d 750 -w -p 3333 ./server.js"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^11.1.2",
+    "lodash": "^4.17.21",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.175",
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.25",
     "@types/react-virtualized": "^9.21.13",
